# MTNCL-gate-networks

./: .gitignore  MTNCL_gates_list.md  binary_adder.vhdl  binary_addition_test.py  claude_v1.py  mtncl_framework.py  mtncl_network.vhdl  mtncl_xor.vhdl  pattern_recognition_test.py  pattern_recognizer.vhdl  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
docs/: sparse-mtncl-paper-notes.md
examples/outputs/20241212_141443/: network_config.json  test_results.json  training_history.json
examples/outputs/toy_models/: mnist.dot  mnist.json  mnist.v  xor.dot  xor.json  xor.v
examples/pattern_recognition/: pattern_recognition.py
examples/toy_models/: mnist_mtncl.py  xor_mtncl.py
examples/xor/: xor_example.py
experiments/: inference_v2_sweep.py  mnist_scaling_sweep.py
experiments/results/inference_v2/: report.md  results.csv
experiments/results/inference_v2/models/: s1_2class_easy_binary_seed11.dot  s1_2class_easy_binary_seed11.v  s1_2class_easy_binary_seed22.dot  s1_2class_easy_binary_seed22.v  s1_2class_easy_hybrid2_seed11.dot  s1_2class_easy_hybrid2_seed11.v  s1_2class_easy_hybrid2_seed22.dot  s1_2class_easy_hybrid2_seed22.v  s1_2class_easy_multibit2_seed11.dot  s1_2class_easy_multibit2_seed11.v  s1_2class_easy_multibit2_seed22.dot  (+13 more)
experiments/results/mnist_scaling/: report.md  results.csv
src/mtncl_nn/: __init__.py  cli.py  ensemble.py  multistart.py  preprocessing.py
src/mtncl_nn/core/: network.py
src/mtncl_nn/gates/: gate.py  gate_types.py
tests/: test_cli.py  test_gate_types.py  test_iverilog_smoke.py  test_network.py
(+10 files in other folders)
